# omnichain-identity

./: README.md  copilot.txt  deployment commands.txt  deployment-guide-wsl.md  hackathoninfo.txt  implementation-guide.md  llms.txt  ps.txt  troubleshooting-guide.md
omnichain-identity/: .gitignore  ACTION_PLAN.md  Anchor.toml  COMPLETE_CONFIG.md  CRITICAL_STATUS_UPDATE.md  CRITICAL_SUCCESS_UPDATE.md  FINAL_SUCCESS_CONFIG.md  LAYERZERO_FIX_COMPLETE.md  LAYERZERO_SETUP.md  PROJECT_STATUS.md  README.md  SOLANA_CONFIG.md  fix-layerzero-v2.sh  implementation-details.md  testing-guide.md
omnichain-identity/app/: .env.example  index.html  package-lock.json  package.json  vite.config.js
omnichain-identity/app/src/: App.css  App.jsx  index.css  main.jsx
omnichain-identity/app/src/utils/: evm.js  (+1 more)
omnichain-identity/evm-contracts/: .env.example  4.5.0  env.example  hardhat.config.js  hardhat.minimal.config.js  layerzero-new.config.ts  layerzero.config.js  layerzero.config.ts  package-lock.json  package.json
omnichain-identity/oapp-solana/: Anchor.toml  anchor-oapp-init.sh  configure-solana-fixed.sh  configure-solana-uln.sh  configure-solana.js  configure-solana.sh  diagnose-solana.js  direct-uln-config.js  direct-uln-config.sh  final-fix.sh  final-layerzero-fix.sh  fix-keypair.sh  fix-peer-config.js  fix-uln.js  hardhat.config.ts  init-oapp-store.sh  initialize-oapp.js  layerzero.config.ts  manual-uln-fix.sh  package-lock.json  quick-fix.js  quick-uln-fix.sh
omnichain-identity/programs/identity-linker/: Cargo.toml
omnichain-identity/programs/identity-linker/src/: lib.rs
(+103 files in other folders)
