[package]
name = "identity-linker"
version = "0.1.0"
description = "Solana program for linking EVM addresses with Solana wallets via LayerZero"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_linker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
layerzero-v2 = { git = "https://github.com/LayerZero-Labs/solana-v2.git", features = ["cpi"] }
borsh = "0.10.3"
